--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.1",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "spiralnotes": "file:.."
   }
 }
