--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.2",
     "router": "^2.2.0",
+    "spiralnotes": "file:..",
     "toast": "^0.5.4"
   },
   "devDependencies": {
